<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>capra_joy_controls</name>
  <version>0.0.0</version>
  <description>Maps joy msgs into controls</description>
  <maintainer email="capra@ens.etsmtl.ca">Capra</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>rclcpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
